[gd_scene load_steps=8 format=2]

[ext_resource path="res://Misc/Coin.gd" type="Script" id=1]
[ext_resource path="res://Misc/CoinSmall.png" type="Texture" id=2]
[ext_resource path="res://Enemies/CriticalSpark.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="Animation" id=2]
resource_name = "default"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.6, 3 ),
"transitions": PoolRealArray( 0.435275, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0, 720.0 ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 150.0

[sub_resource type="CircleShape2D" id=4]
radius = 15.0

[node name="Coin1" type="KinematicBody2D"]
collision_layer = 32
collision_mask = 64
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -3.37645 )
rotation = 2.17623
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 2 )

[node name="Detect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.24

[node name="Collect" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Collect"]
shape = SubResource( 4 )

[node name="CriticalSpark" parent="." instance=ExtResource( 3 )]
scale = Vector2( 0.08, 0.08 )

[node name="Buffer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[connection signal="body_entered" from="Detect" to="." method="_on_detect_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Collect" to="." method="_on_collect_body_entered"]
[connection signal="timeout" from="Buffer" to="." method="_on_buffer_timeout"]
